Adjust to the newest Panama changes